Update with new URL, older one no longer works

--- a/sample-html-with-meta-refresh.html
+++ b/sample-html-with-meta-refresh.html
@@ -12,7 +12,7 @@
 	}
 	</script>
 
-		<meta http-equiv="refresh" content="2;url=https://www.sopranodesign.com/secure-healthcare-messaging/?utm_source=twitter&utm_medium=socialmedia&utm_campaign=soprano">
+		<meta http-equiv="refresh" content="2;url=https://www.netspective.com/?utm_source=lectio_harvester_resource_test.go&utm_medium=go.TestSuite&utm_campaign=harvester.ResourceSuite">
 	</head>
 <body>
 <script>
